# exopy

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md
examples/: exo.py
src/exo/: exo.cpp
src/exopy/: exopy.cpp
